# airflow-dbcleanup-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  cloud_providers.py  dbcleanup_plugin.py  environment.py  pyproject.toml  utils.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
docs/: aws-usage.md  usage.md
