[build-system]
requires = ["build", "setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "astronomer-dbcleanup-plugin"
description = "A DB cleanup plugin for Astronomer Airflow"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "airflow",
    "analytics",
    "Astronomer",
    "astronomer.io",
    "plugin",
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "apache-airflow>=2",
]

[project.entry-points."airflow.plugins"]
    astronomer_dbcleanup_plugin = "astronomer_dbcleanup_plugin.dbcleanup_plugin:AstronomerPlugin"

[options.extras_require]
test = [
    "flake8",
    "flake8-import-order>=0.18",
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "pytest-mock",
    "pytest-runner~=4.0",
]

[tool.aliases]
test = "pytest"

[tool.flake8]
max-line-length = "160"
application-import-names = "astronomer"
import-order-style = "google"

[tool.setuptools]
include-package-data = true
package-dir = { "astronomer_dbcleanup_plugin" = "." }

[tool.setuptools.dynamic]
version = { attr = "dbcleanup_plugin.__version__" }

[tool.setuptools.package-data]
astronomer_dbcleanup_plugin = ["templates/dbcleanup_plugin/index.html"]
